menu page is now fully generated with js

--- a/src/home.html
+++ b/src/home.html
@@ -10,185 +10,12 @@
         <main id="content">
             <header class="header">
                 <nav class="nav-btns">
+                    <button type="button" class="nav-btn mochiy-pop-one-regular" id="menu">Menu</button>
                     <button type="button" class="nav-btn mochiy-pop-one-regular" id="home">Home</button>
                     <button type="button" class="nav-btn mochiy-pop-one-regular" id="about">About</button>
-                    <button type="button" class="nav-btn mochiy-pop-one-regular" id="menu">Menu</button>
                 </nav>
             </header>
-            <!-- <div id="about" class="page hidden">
-                <section class="landing-page hero-section">
-                    <div class="hero-inner">
-                        <h1 class="hero-text poiret-one-regular">The Pizza Place</h1>
-                        <div class="about-text">
-
-                            <div class="first">
-                                <h3 class="section-title libre-franklin-font">Our Story: Slicing Through the Ordinary</h3>
-                                <div class="description">
-                                    <p>
-                                        More than just a pizza place, The Pizza Place is a labor of love, a culinary dream baked to perfection. Our journey began with a simple yet profound belief: that pizza can be so much more than just a
-                                        quick meal. It can be an experience - a symphony of fresh flavors, a comforting embrace, and a reason to gather around the table with loved ones.
-                                    </p>
-                                    <p>
-                                        Our commitment goes beyond just crafting delicious pizzas. We believe in the power of community and the importance of using fresh, high-quality ingredients. That's why we partner with local farmers
-                                        and producers whenever possible, ensuring that every bite you take is bursting with natural goodness. From the sun-ripened tomatoes in our marinara to slow-roasted pulled pork, we are dedicated to
-                                        bringing you the freshest flavors that can be offered.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div class="second">
-                                <h3 class="section-title libre-franklin-font">What Makes Our Pizza Special?</h3>
-                                <div class="description">
-                                    <p>
-                                        At The Pizza Place, we pour our heart and soul into every pizza we make.
-                                    </p>
-                                    <ul>
-                                        <li>
-                                            <h4 class="libre-franklin-font">The Perfect Crust</h4>
-                                            <p>
-                                                Our dough is slow-fermented for exceptional flavor. This meticulous process results in a crust that is perfectly crisp on the outside and delightfully chewy on the inside.
-                                            </p>
-                                        </li>
-                                        <li>
-                                            <h4 class="libre-franklin-font">Bold and Flavorful Sauces</h4>
-                                            <p>
-                                                Our sauces are made in-house from scratch, using time-honored recipes and the finest ingredients from our hometown. Whether you crave the classic tang of our marinara, the creamy richness of
-                                                our Alfredo, or the zesty kick of our pesto, our sauces are designed to complement and elevate our toppings.
-                                            </p>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="third">
-                                <h3 class="section-title libre-franklin-font">Join our Pizza journey!</h3>
-                                <div class="description">
-                                    <p>
-                                        We're incredibly excited to share our passion for pizza with you. Come visit us at our main branches and taste the difference that dedication and quality ingredients make. Follow us on social media to
-                                        stay updated on our latest creations and special offers.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div class="fourth">
-                                <h3 class="section-title freeman-regular">From our oven to your table, we can't wait to serve you a slice of happiness!</h3>
-                                <span class="freeman-regular">The Pizza Place Team</span>
-                            </div>
-                        </div>
-                        <figure class="hero-img"></figure>
-                    </div>
-                </section>
-            </div> -->
-
-            <!-- <div id="home" class="page">
-                <section class="landing-page hero-section">
-                    <div class="hero-inner">
-                        <figure class="hero-img"></figure>
-                        <h2 class="hero-text poiret-one-regular">The Pizza Place</h2>
-                    </div>
-                </section>
-                <section class="description hero-section">
-                    <div class="hero-inner">
-                        <figure class="hero-img"></figure>
-                        <h2 class="hero-text abril-fatface-regular">The best of its kind, yet.</h2>
-                    </div>
-                </section>
-                <section class="description hero-section">
-                    <div class="hero-inner">
-                        <figure class="hero-img"></figure>
-                        <h2 class="hero-text podkova-font">Here at The Pizza Place, pizza is served hot and fresh, made from natural ingredients.</h2>
-                    </div>
-                </section>
-                <section class="popular-choices hero-section">
-                    <div class="hero-inner">
-                        <div class="pizzas">
-                            <div class="pizza">
-                                <figure class="img"></figure>
-                            </div>
-                            <div class="pizza">
-                                <figure class="img"></figure>
-                            </div>
-                            <div class="pizza">
-                                <figure class="img"></figure>
-                            </div>
-                            <div class="pizza">
-                                <figure class="img"></figure>
-                            </div>
-                        </div>
-                        <h2 class="hero-text abril-fatface-regular">Popular Choices</h2>
-                    </div>
-                </section>
-                <section class="social hero-section">
-                    <div class="hero-inner">
-                        <div class="left">
-                            <figure class="hero-img"></figure>
-                            <h2 class="hero-text abril-fatface-regular">What other people say</h2>
-                        </div>
-                        <article class="twitter-card">
-                            <div class="name-container">
-                                <div>
-                                    <h4 class="name">John Appleseed</h4>
-                                    <h6 class="user-handle">@appleseeder</h6>
-                                </div>
-                            </div>
-                            <p class="tweet">The pizza here is unlike any other I've tasted. It's real amazing stuff.</p>
-                            <p class="metadata">
-                                8:00PM Jan 5, 2025 <span class="views">50.3K</span> views
-                            </p>
-                        </article>
-                    </div>
-                </section>
-                <section class="newsletter hero-section">
-                    <div class="hero-inner">
-                        <figure class="hero-img"></figure>
-                        <aside class="newsletter-box">
-                            <h2 class="hero-title abril-fatface-regular">Subscribe to our newsletter</h2>
-                            <div class="input">
-                                <input type="text" placeholder="Enter your email" />
-                                <button class="mochiy-pop-one-regular" type="button">Sign up</button>
-                            </div>
-                            <div class="newsletter-text actor-regular">Sign up for updates on our latest creations and best offers!</div>
-                        </aside>
-                    </div>
-                </section>
-                <section class="branches hero-section">
-                    <div class="hero-inner">
-                        <svg viewBox="0 0 500 500" class="hero-title permanent-marker-regular">
-                            <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
-                            <text width="500">
-                                <textPath xlink:href="#curve">
-                                    Branches
-                                </textPath>
-                            </text>
-                        </svg>
-                        <div class="branch-addresses">
-                            <div class="branch-address">
-                                <div class="address-info">
-                                    <h3 class="name">Canada</h3>
-                                    <p class="address">380 Ezra Greens, Torpport, Nunavut E6I 3N4, Canada</p>
-                                </div>
-                                <figure class="hero-img"></figure>
-                            </div>
-                            <div class="branch-address">
-                                <div class="address-info">
-                                    <h3 class="name">Norway</h3>
-                                    <p class="address">511 Linnea vika, Lake Sofie, 7141, Norway</p>
-                                </div>
-                                <figure class="hero-img"></figure>
-                            </div>
-                            <div class="branch-address">
-                                <div class="address-info">
-                                    <h3 class="name">France</h3>
-                                    <p class="address">789 Petit du Bac, Clarenceview, Franche-Comté 69982, France</p>
-                                </div>
-                                <figure class="hero-img"></figure>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div> -->
-
-            <div id="menu" class="page hidden">
+            <!-- <div id="menu" class="page hidden">
                 <section class="landing-page hero-section">
                     <div class="hero-inner">
                         <button class="arrow-left hidden" type="button"><i class="fa-solid fa-arrow-left"></i></button>
@@ -265,8 +92,7 @@
                         <button class="arrow-right" type="button"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </section>
-            </div>
-
+            </div> -->
             <footer class="footer">
                 <p class="restaurant-name poiret-one-regular">The Pizza Place</p>
                 <div class="social-media-icons">
